# rustune

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/audio/: decoder.rs  engine.rs  mod.rs  output.rs  queue.rs
src-tauri/src/commands/: library.rs  lyrics.rs  mod.rs  playback.rs  playlist.rs  settings.rs  tags.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/lyrics/: lrclib.rs
src-tauri/src/tags/: editor.rs
src/components/AlbumView/: AlbumView.module.css  AlbumView.tsx
src/components/ArtistView/: ArtistView.module.css  ArtistView.tsx
src/components/NowPlaying/: NowPlaying.module.css  NowPlaying.tsx
src/components/PlayerBar/: PlayerBar.module.css  PlayerBar.tsx
src/components/PlaylistCover/: PlaylistCover.module.css  PlaylistCover.tsx
src/components/QueuePanel/: QueuePanel.module.css  QueuePanel.tsx
src/components/SettingsView/: SettingsView.module.css  SettingsView.tsx
src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/TagEditor/: TagEditor.module.css  TagEditor.tsx
src/components/TitleBar/: TitleBar.module.css  TitleBar.tsx
src/components/TrackList/: TrackList.module.css  TrackList.tsx
src/lib/: commands.ts  themes.ts  throttle.ts
src/stores/: libraryStore.ts  playerStore.ts  playlistStore.ts  selectionStore.ts  settingsStore.ts
src/styles/: globals.css
