[package]
name = "rustune"
version = "0.1.0"
description = "A cross-platform local music player"
authors = ["f1sh"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rustune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

rand = "0.8"
