[package]
name = "rustune"
version = "0.1.0"
description = "A cross-platform local music player"
authors = ["f1sh"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rustune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "wav", "pcm", "ogg", "vorbis", "aac", "isomp4", "alac", "adpcm"
] }
cpal = "0.15"
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
reqwest = { version = "0.12", features = ["json"] }

ringbuf = "0.4"
rayon = "1.10"
rand = "0.8"
base64 = "0.22"
notify = "7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
